2007-11-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/check.sh: skip check for the lang v1
	test file.

2007-11-26  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/docbook.lang: reverted last styles
	change, docbook elements should not look like regular xml tags.

2007-11-26  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/testv1.lang: do not mark anything
	for translation.
	* gtksourceview/language-specs/docbook.lang: use xml:element-name
	default style for docbook elements instead of def:keyword.
	* gtksourceview/language-specs/kate.xml: changed docbook elements
	colors.

2007-11-26  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/pascal.lang: fixed {} comments
	when { is the last character on the line. Patch by Oliver Sauder,
	#499675.

2007-11-24  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceundomanager.c: replaced a singly-linked
	list of actions with an array, to avoid freezing when undoing/redoing
	big number of actions.

2007-11-16  Steve Frécinaux  <code@istique.net>

	* gtksourceview/language-specs/php.lang: fix highlighting of null,
	true and false (e.g. is_null was highlighted as is_ null).

2007-11-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: Improve performance
	with long text lines: use byte offsets in all functions which
	deal with regex matching; use less gtk_text_buffer_get_iter_at_offset()
	in apply_tags();

2007-11-10  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/pascal.lang: pascal is not case
	sensitive. Patch by Adrien Cunin, fixes bug #495666.

2007-11-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* tests/test-widget.c: parse "gtk-source-lang: foo" on the first
	line of file, modeline for poor.
	* gtksourceview/language-specs/testv1.lang: a version 1 lang file,
	for testing.
	* gtksourceview/language-specs/testfiles.sh: output file.testv1 to
	test with testv1.lang.
