@@ -1,3 +1,13 @@
+2007-12-13  Yevgen Muntyan  <muntyan@tamu.edu>
+
+	* gtksourceview/language-specs/sql.lang: highlight backtick-quoted
+	strings as strings.
+	* gtksourceview/language-specs/sh.lang: # does not necessarily starts
+	a comment; try not to highlight known commands and keywords when they
+	are parts of larger tokens, like 'local' in /usr/local.
+	* gtksourceview/language-specs/kate.xml: highlight LaTeX's \usepackage
+	and \include as other known commands.
+
 2007-11-26  Paolo Borelli  <pborelli@katamail.com>
 
 	* gtksourceview/language-specs/check.sh: skip check for the lang v1
